--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,16 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      - POSTGRES_PASSWORD=teamcity_password
+      - POSTGRES_PASSWORD=teamcity_password 
       - POSTGRES_USER=teamcity_user
       - POSTGRES_DB=teamcity_db
       - PG_DATA=/var/lib/postgresql/data
-    volumes:
-      - ./buildserver_pgdata:/var/lib/postgresql/data
     ports:
-      - 5433:5432
+      - "5433:5432"
 
   teamcity:
     image: jetbrains/teamcity-server:${TEAMCITY_VERSION}
+    hostname: teamcity.local
     restart: always
     ports:
       - "8111:8111"
@@ -54,6 +53,7 @@ services:
   gitlab:
     image: gitlab/gitlab-ee:latest
     restart: always
+    hostname: gitlab.local
     ports:
       - "80:80"
       - "443:443"
@@ -63,4 +63,10 @@ services:
       - ${GITLAB_HOME}/logs:/var/log/gitlab
       - ${GITLAB_HOME}/data:/var/opt/gitlab
     environment:
-      - GITLAB_OMNIBUS_CONFIG="external_url 'http://gitlab.local:8222'"
+      - GITLAB_OMNIBUS_CONFIG="external_url 'http://gitlab.local'"
+  gitlab-runner-1:
+    image: gitlab/gitlab-runner
+    restart: always
+    volumes:
+      - ./gitlab-runners/runner-1/config:/etc/gitlab-runner
+      - ./gitlab-runners/runner-1/run/docker.sock:/var/run/docker.sock
