--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,9 +59,9 @@ services:
       - "443:443"
       - "22:22"
     volumes:
-      - ${GITLAB_HOME}/config:/etc/gitlab
-      - ${GITLAB_HOME}/logs:/var/log/gitlab
-      - ${GITLAB_HOME}/data:/var/opt/gitlab
+      - /srv/gitlab-runners/runner-1/config:/etc/gitlab
+      - /srv/gitlab-runners/runner-1/logs:/var/log/gitlab
+      - /srv/gitlab-runners/runner-1/data:/var/opt/gitlab
     environment:
       - GITLAB_OMNIBUS_CONFIG="external_url 'http://gitlab.local'"
   gitlab-runner-1:
